[package]
name = "leetcode-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.13", features = [
  "blocking",
  "json",
  "__native-tls-alpn",
  "gzip",
  "deflate",
  "zstd",
  "brotli",
] }
tokio = { version = "1", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rand = "0.6.5"
regex = "1.3.4"
futures = { version = "0.3.31", features = ["thread-pool"] }
surf = "2.3.2"
dotenv = "0.15.0"

[lib]
doctest = false
test = true

[dev-dependencies]
assert_float_eq = "1"
